# CuRIG

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
contrib/: common.cpp  common.h  utils_fp.h
include/: conv.h  conv_interp_invoker.h  conv_invoker.h  cuft.h  cugridder.h  curafft_opts.h  curafft_plan.h  dataType.h  datatype.h  deconv.h  deconv_invoker.h  dft.h  interp.h  precomp.h  ragridder_plan.h  utils.cuh  utils.h  visibility.h
python/curagridder/: __init__.py  curagridder.py  cursl.py  explicit_test.py  test.py  test_ws.py  test_wst.py
src/: utils.cu  utils.h
src/FT/: conv.cu  conv.cuh  conv.h  conv_invoker.cu  conv_invoker.h  cuft.cu  deconv.cu  deconv_invoker.cu  dft.cu  matrix.cuh  nufft.cu  test.cu
src/RA/: cugridder.cu  precomp.cu  ra_exec.cu  ra_exec.h  visibility.h
src/astro/: cugridder.cu  precomp.cu  ra_exec.cu
src/fourier/: conv.cu  conv_interp_invoker.cu  cuft.cu
src/processing_components/FT/: matrix.cu  nufft.cu  nufft.cuh
src/processing_components/GPU_info/: device_info.cu
test/: CMakeLists.txt  conv_2d_test.cu  conv_3d_test.cu  conv_test.cu  conv_theorem_dft_2_test.cu  conv_theorem_dft_test.cu  convolution.cu  explicit_gridder_test.cu  nufft_1d_test.cu  nufft_2d_test.cu  test.cu  utils_test.cu  w_s_degridder_test.cu  w_s_gridder_test.cu  w_s_sim_test.cu  w_s_test.cu
